--- a/scss/gen/_vars.scss
+++ b/scss/gen/_vars.scss
@@ -13,10 +13,10 @@ $body-font: 'Source Sans Pro', sans-serif;
 
 @font-face {
     font-family: 'A-DAY-WITHOUT-SUN';
-    src:url('../../assets/fonts/A-DAY-WITHOUT-SUN.ttf.woff') format('woff'),
-        url('../../assets/fonts/A-DAY-WITHOUT-SUN.ttf.svg#A-DAY-WITHOUT-SUN') format('svg'),
-        url('../../assets/fonts/A-DAY-WITHOUT-SUN.ttf.eot'),
-        url('../../assets/fonts/A-DAY-WITHOUT-SUN.ttf.eot?#iefix') format('embedded-opentype'); 
+    src:url('../assets/fonts/A-DAY-WITHOUT-SUN.ttf.woff') format('woff'),
+        url('../assets/fonts/A-DAY-WITHOUT-SUN.ttf.svg#A-DAY-WITHOUT-SUN') format('svg'),
+        url('../assets/fonts/A-DAY-WITHOUT-SUN.ttf.eot'),
+        url('../assets/fonts/A-DAY-WITHOUT-SUN.ttf.eot?#iefix') format('embedded-opentype'); 
     font-weight: normal;
     font-style: normal;
 }
