--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,5 +5,8 @@
 @import 'components/_buttons';
 @import 'components/_header';
 @import 'components/_mobile-nav';
-@import 'components/_frontpage';
+@import 'components/_cards';
 @import 'components/_footer';
+
+@import 'pages/_frontpage';
+@import 'pages/_games';
