--- a/css/main.css
+++ b/css/main.css
@@ -28,11 +28,17 @@ h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 4rem;
   font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 2rem 0;
 }
 
 h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
+  font-weight: normal;
+  font-style: italic;
+  margin-bottom: 2rem;
 }
 
 h2::after {
@@ -43,7 +49,7 @@ h3 {
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 a {
@@ -52,8 +58,15 @@ a {
   text-decoration: none;
 }
 
+.main-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% auto 20%;
+      grid-template-columns: 20% auto 20%;
+}
+
 .btn {
-  padding: 1rem 2rem;
+  padding: 0.5rem 1.5rem;
   margin: 0 1rem;
   font-weight: bold;
   font-family: "Montserrat", sans-serif;
@@ -117,7 +130,7 @@ a {
 .btn-ghost {
   background: transparent;
   border: 3px solid #4EFF58;
-  padding: 0.84rem 1.9rem;
+  padding: 0.5rem 1.5rem;
 }
 
 .btn-ghost:hover, .btn-ghost:focus {
@@ -129,6 +142,9 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .social-icon {
@@ -149,16 +165,17 @@ a {
   background: #120C40;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 10% 10% auto 10%;
-      grid-template-columns: 10% 10% auto 10%;
+  -ms-grid-columns: 10% 15% auto 10%;
+      grid-template-columns: 10% 15% auto 10%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
   height: 60px;
   font-family: "Montserrat", sans-serif;
-  -webkit-box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  position: relative;
+  -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
 }
 
 .header__logo {
@@ -317,7 +334,7 @@ a {
   display: none;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 855px) {
   .header {
     position: relative;
     z-index: 100;
@@ -381,75 +398,42 @@ a {
   }
 }
 
-.main-container {
-  background: #E9E9E9;
-  min-height: 80vh;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 10% auto 10%;
-      grid-template-columns: 10% auto 10%;
-  padding-bottom: 1rem;
+.games-card {
+  background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem;
+  width: 100%;
 }
 
-.main-container.transhaping-promo {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#201573), color-stop(#1c1366), color-stop(#181159), color-stop(#150f4c), to(#120c40));
-  background-image: linear-gradient(to bottom, #201573, #1c1366, #181159, #150f4c, #120c40);
-  color: #F8F8F8;
-  text-align: center;
+.games-card__image {
+  width: 45%;
 }
 
-.main-container.transhaping-promo h1 {
-  margin-top: 3rem;
-  font-family: "A-DAY-WITHOUT-SUN", "Montserrat", serif;
-  font-weight: normal;
-  font-size: 20vh;
-  text-transform: uppercase;
+.games-card__image img {
+  width: 100%;
 }
 
-.main-container.transhaping-promo .hero {
-  width: 60%;
+.games-card__content {
+  width: 55%;
+  min-width: 345px;
+  padding-left: 1rem;
 }
 
-.main-container.transhaping-promo p {
-  font-size: 1.2rem;
-  margin-bottom: 2rem;
-  font-family: 'Nanum Gothic Coding', monospace;
+.games-card__content h3 {
+  margin-bottom: 1rem;
 }
 
-.main-container.transhaping-promo .btn-group {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 2rem 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.games-card__content .btn-group {
+  margin-top: 1rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
-.main-container.transhaping-promo .btn-group .btn {
-  font-size: 1.2rem;
-  text-transform: uppercase;
-}
-
-.main-container.transhaping-promo .btn-group .btn-main {
-  color: #120C40;
-}
-
-@media only screen and (max-width: 800px) {
-  .main-container.transhaping-promo .btn-group {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .main-container.transhaping-promo .btn-group .btn {
-    margin-bottom: 1rem;
-  }
-}
-
-.main-container__content {
-  -ms-grid-column: 2;
-  grid-column: 2;
+.games-card__content .btn-group .btn {
+  margin-left: 0;
 }
 
 .footer {
@@ -489,4 +473,83 @@ a {
 
 .footer__content .copyright i {
   margin: 0 0.3rem;
+}
+
+.main-container {
+  background: #E9E9E9;
+  min-height: 80vh;
+  padding-bottom: 1rem;
+}
+
+.main-container.transhaping-promo {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#201573), color-stop(#1c1366), color-stop(#181159), color-stop(#150f4c), to(#120c40));
+  background-image: linear-gradient(to bottom, #201573, #1c1366, #181159, #150f4c, #120c40);
+  color: #F8F8F8;
+  text-align: center;
+  -ms-grid-columns: 10% auto 10%;
+      grid-template-columns: 10% auto 10%;
+}
+
+.main-container.transhaping-promo h1 {
+  margin-top: 3rem;
+  font-family: "A-DAY-WITHOUT-SUN", "Montserrat", serif;
+  font-weight: normal;
+  font-size: 20vh;
+  text-transform: uppercase;
+}
+
+.main-container.transhaping-promo .hero {
+  width: 60%;
+}
+
+.main-container.transhaping-promo p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  font-family: 'Nanum Gothic Coding', monospace;
+}
+
+.main-container.transhaping-promo .btn-group {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 2rem 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-container.transhaping-promo .btn-group .btn {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+.main-container.transhaping-promo .btn-group .btn-main {
+  color: #120C40;
+  padding: 1rem 2rem;
+}
+
+.main-container.transhaping-promo .btn-group .btn-ghost {
+  padding: 0.84rem 1.9rem;
+}
+
+@media only screen and (max-width: 855px) {
+  .main-container.transhaping-promo .btn-group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main-container.transhaping-promo .btn-group .btn {
+    margin-bottom: 1rem;
+  }
+}
+
+.main-container__content {
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.games__soon {
+  text-align: center;
+  margin: 2rem 0;
 }
