--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-    padding: 1rem 2rem;
+    padding: 0.5rem 1.5rem;
     margin: 0 1rem;
     font-weight: bold;
     font-family: $heading-font;
@@ -30,7 +30,7 @@
     &-ghost {
         background: transparent;
         border: 3px solid $primary;
-        padding: 0.84rem 1.9rem;
+        padding: 0.5rem 1.5rem;
 
         &:hover, &:focus {
             background: $primary;
@@ -40,6 +40,7 @@
 
     &-group {
         display: flex;
+        align-items: center;
     }
 }
 
