--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,12 +1,13 @@
 .header {
     background: $header-background;
     display: grid;
-    grid-template-columns: 10% 10% auto 10%;
+    grid-template-columns: 10% 15% auto 10%;
     align-items: center;
     width: 100%;
     height: 60px;
     font-family: $heading-font;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    position: relative;
+	box-shadow: 0 3px 20px rgba(0,0,0,0.3);
 
     &__logo {
         grid-column: 2;
