--- a/scss/gen/_vars.scss
+++ b/scss/gen/_vars.scss
@@ -32,6 +32,8 @@ $transhaping-font: 'A-DAY-WITHOUT-SUN', 'Montserrat', serif;
 @mixin heading-2 {
     font-family: $heading-font;
     font-size: 2.5rem;
+    font-weight: normal;
+    font-style: italic;
 
     &::after {
         content: '_';
@@ -42,5 +44,5 @@ $transhaping-font: 'A-DAY-WITHOUT-SUN', 'Montserrat', serif;
     font-family: $heading-font;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
 }
