--- a/scss/pages/_frontpage.scss
+++ b/scss/pages/_frontpage.scss
@@ -1,14 +1,13 @@
 .main-container {
     background: $grey-light;
     min-height: 80vh;
-    display: grid;
-    grid-template-columns: 10% auto 10%;
     padding-bottom: 1rem;
 
     &.transhaping-promo {
         background-image: linear-gradient(to bottom, #201573, #1c1366, #181159, #150f4c, #120c40);
         color: $white;
         text-align: center;
+        grid-template-columns: 10% auto 10%;
 
         h1 {
             margin-top: 3rem;
@@ -39,6 +38,11 @@
 
                 &-main {
                     color: $header-background;
+                    padding: 1rem 2rem;
+                }
+
+                &-ghost {
+                    padding: 0.84rem 1.9rem;
                 }
             }
         }
