--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,11 +1,11 @@
 .games-card {
     background: white;
     display: flex;
-    padding: 1rem;
     width: 100%;
 
     &__image {
-        width: 45%;
+        flex-basis: 45%;
+        padding: 1rem;
 
         img {
             width: 100%;
@@ -13,9 +13,8 @@
     }
 
     &__content {
-        width: 55%;
-        min-width: 345px;
-        padding-left: 1rem;
+        flex-basis: 55%;
+        padding: 1rem;
 
         h3 {
             margin-bottom: 1rem;
@@ -29,5 +28,28 @@
                 margin-left: 0;
             }
         }
+    }
+}
+
+@include tiny-screens {
+    .games-card {
+        .btn-group {
+            flex-direction: column;
+    
+            > * {
+                width: 100%;
+            }
+
+            span {
+                text-align: center;
+                margin-top: 1rem;
+            }
+        }
+    }    
+}
+
+@include mobile-content {
+    .games-card {
+        flex-direction: column;
     }
 }
