--- a/scss/gen/_mixins.scss
+++ b/scss/gen/_mixins.scss
@@ -1,5 +1,17 @@
+@mixin tiny-screens {
+    @media only screen and (max-width: 500px) {
+        @content;
+    }
+}
+
 @mixin mobile-content {
     @media only screen and (max-width: 855px){
+        @content;
+    }
+}
+
+@mixin tablet-content {
+    @media only screen and (max-width: 1150px){
         @content;
     }
 }
