--- a/scss/gen/_vars.scss
+++ b/scss/gen/_vars.scss
@@ -4,6 +4,7 @@ $primary-alt: #29E133;
 $primary-light: #F2FFF3;
 $secondary: #29D4FB;
 $header-background: #120C40;
+$body-color: #2B2B2B;
 $white: #F8F8F8;
 $grey-light: #E9E9E9; 
 
@@ -31,7 +32,7 @@ $transhaping-font: 'A-DAY-WITHOUT-SUN', 'Montserrat', serif;
 
 @mixin heading-2 {
     font-family: $heading-font;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: normal;
     font-style: italic;
 
