--- a/scss/pages/_games.scss
+++ b/scss/pages/_games.scss
@@ -1,4 +1,27 @@
-.games__soon {
-    text-align: center;
-    margin: 2rem 0;
+.games {
+    h1 > .shapes-heading {
+        position: relative;
+
+        &::before, &::after {
+            content: '';
+            position: absolute;
+            width: 2rem;
+            height: 2rem;
+            background: #15DEE8;
+            top: 1.5rem;
+        }
+        &::before {
+            left: -3.5rem;
+        }
+
+        &::after {
+            right: -3.5rem;
+        }
+    }
+
+    &__soon {
+        text-align: center;
+        margin: 2rem 0;
+        color: grey;
+    }
 }
