--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,10 @@ html {
   color: #2B2B2B;
 }
 
-input {
+input, textarea {
   border: 0;
   font-family: inherit;
+  outline: 0;
 }
 
 h1 {
@@ -32,6 +33,16 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   margin: 2rem 0;
+}
+
+h1 > .shapes-heading {
+  position: relative;
+}
+
+h1 > .shapes-heading::before, h1 > .shapes-heading::after {
+  content: '';
+  position: absolute;
+  top: 1.5rem;
 }
 
 h2 {
@@ -67,6 +78,10 @@ p {
   line-height: 1.5;
 }
 
+p + p {
+  margin-top: 1rem;
+}
+
 .main-container {
   display: -ms-grid;
   display: grid;
@@ -74,7 +89,15 @@ p {
       grid-template-columns: 20% auto 20%;
 }
 
-@media only screen and (max-width: 1150px) {
+.content-box {
+  padding: 1rem;
+  background: white;
+  margin-bottom: 2rem;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (max-width: 1470px) {
   .main-container {
     -ms-grid-columns: 10% auto 10%;
         grid-template-columns: 10% auto 10%;
@@ -435,6 +458,8 @@ p {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 .games-card__image {
@@ -468,6 +493,109 @@ p {
   margin-left: 0;
 }
 
+.card-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card-container .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: white;
+  padding: 1rem;
+  min-width: 330px;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-container .card:not(:last-of-type) {
+  margin-right: 0.5rem;
+}
+
+.card-container .card__header {
+  background: url(../../assets/shape-header.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card-container .card__header-inner {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(1%, white), to(rgba(255, 123, 188, 0)));
+  background: linear-gradient(0deg, white 1%, rgba(255, 123, 188, 0) 100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card-container .card__header-image {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+.card-container .card__header-image img {
+  width: 100%;
+  border-radius: 50%;
+  border: 3px solid white;
+}
+
+.card-container .card__header-title {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-left: 1rem;
+}
+
+.card-container .card__header-title h3 {
+  margin-bottom: 1rem;
+}
+
+.card-container .card__header-title span {
+  color: grey;
+}
+
+.card-container .card__body {
+  padding: 1rem 0;
+}
+
+.card-container .card__facts {
+  padding-top: 1rem;
+}
+
+.card-container .card__facts h4 {
+  text-align: center;
+  padding: 1rem 0;
+  margin-bottom: 1rem;
+  background: #9E43FF;
+  color: white;
+  text-transform: uppercase;
+}
+
+.card-container .card__facts ol {
+  margin-left: 1rem;
+}
+
+.card-container .card__facts ol li {
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+
+.card-container .card__footer .btn-group {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 @media only screen and (max-width: 500px) {
   .games-card .btn-group {
     -webkit-box-orient: vertical;
@@ -490,6 +618,21 @@ p {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 1150px) {
+  .card-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .card-container .card {
+    margin-bottom: 1rem;
+  }
+  .card-container .card:not(:last-of-type) {
+    margin-right: 0;
   }
 }
 
@@ -535,7 +678,7 @@ p {
 .main-container {
   background: #E9E9E9;
   min-height: 80vh;
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
 }
 
 .main-container.transhaping-promo {
@@ -545,6 +688,7 @@ p {
   text-align: center;
   -ms-grid-columns: 10% auto 10%;
       grid-template-columns: 10% auto 10%;
+  padding-bottom: 1rem;
 }
 
 .main-container.transhaping-promo h1 {
@@ -607,13 +751,13 @@ p {
   grid-column: 2;
 }
 
-.games h1 > .shapes-heading {
-  position: relative;
+@media only screen and (max-width: 855px) {
+  .main-container.transhaping-promo h1 {
+    font-size: 10vh;
+  }
 }
 
 .games h1 > .shapes-heading::before, .games h1 > .shapes-heading::after {
-  content: '';
-  position: absolute;
   width: 2rem;
   height: 2rem;
   background: #15DEE8;
@@ -632,4 +776,124 @@ p {
   text-align: center;
   margin: 2rem 0;
   color: grey;
+}
+
+@media only screen and (max-width: 500px) {
+  .games h1 > .shapes-heading::before, .games h1 > .shapes-heading::after {
+    top: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .games h1 > .shapes-heading::before {
+    left: -2.5rem;
+  }
+  .games h1 > .shapes-heading::after {
+    right: -2.5rem;
+  }
+}
+
+.team h1 > .shapes-heading::before, .team h1 > .shapes-heading::after {
+  width: 2rem;
+  height: 2rem;
+  background: #9E43FF;
+  border-radius: 50%;
+}
+
+.team h1 > .shapes-heading::before {
+  left: -3.5rem;
+}
+
+.team h1 > .shapes-heading::after {
+  right: -3.5rem;
+}
+
+.contact h1 > .shapes-heading::before, .contact h1 > .shapes-heading::after {
+  background: #FFA033;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  width: 2rem;
+  height: 2rem;
+}
+
+.contact h1 > .shapes-heading::before {
+  left: -3.5rem;
+}
+
+.contact h1 > .shapes-heading::after {
+  right: -3.5rem;
+}
+
+.contact h1 {
+  margin-bottom: 4rem;
+}
+
+.contact .main-container__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact .main-container__content .contact__info {
+  background: green;
+  width: 40%;
+  position: absolute;
+  top: 5rem;
+  left: -10rem;
+  padding: 2rem;
+  color: #F2FFF3;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.contact .main-container__content .contact__form {
+  background: white;
+  min-width: 500px;
+  width: 70%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-left: 35%;
+  padding-top: 3rem;
+  position: relative;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.contact .main-container__content .contact__form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: 1rem;
+  padding: 0 1rem 3rem 0;
+}
+
+.contact .main-container__content .contact__form form label input, .contact .main-container__content .contact__form form label textarea {
+  background: #F3F3F3;
+  width: 100%;
+  margin-bottom: 1rem;
+  padding: 0.5rem 1rem;
+}
+
+.contact .main-container__content .contact__form form label textarea {
+  resize: none;
+  padding: 0.5rem 1rem 4rem 1rem;
+}
+
+.contact .main-container__content .contact__form form button {
+  border: 0;
+  cursor: pointer;
+  text-transform: uppercase;
+  padding: 1rem;
+  width: 40%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
