--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -2,6 +2,7 @@
     background: white;
     display: flex;
     width: 100%;
+    @include box-shadow;
 
     &__image {
         flex-basis: 45%;
@@ -31,6 +32,90 @@
     }
 }
 
+.card-container {
+    display: flex;
+    //flex-wrap: wrap;
+    justify-content: center;
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        background: white;
+        padding: 1rem;
+        min-width: 330px;
+        @include box-shadow;
+
+        &:not(:last-of-type){
+            margin-right: 0.5rem;
+        }
+
+        &__header {
+            background: url(../../assets/shape-header.png);
+            background-size: cover;
+            background-repeat: no-repeat;
+
+            &-inner {
+                background: linear-gradient(0deg, rgba(255,255,255,1) 1%, rgba(255,123,188,0) 100%);    
+                display: flex;
+                align-items: center;
+            }
+
+            &-image {
+                flex-basis: 30%;
+
+                img {
+                    width: 100%;
+                    border-radius: 50%;
+                    border: 3px solid white;
+                }
+            }
+
+            &-title {
+                flex: 1;
+                margin-left: 1rem;
+
+                h3 {
+                    margin-bottom: 1rem;
+                }
+
+                span {
+                    color: grey;
+                }
+            }
+        }
+
+        &__body {
+            padding: 1rem 0;
+        }
+
+        &__facts {
+            padding-top: 1rem;
+            h4 {
+                text-align: center;
+                padding: 1rem 0;
+                margin-bottom: 1rem;
+                background: #9E43FF;
+                color: white;
+                text-transform: uppercase;
+            }
+
+            ol {
+                margin-left: 1rem;
+                li {
+                    line-height: 1.5;
+                    margin-bottom: 1rem;
+                }
+            }
+        }
+
+        &__footer {
+            .btn-group{ 
+                justify-content: center;
+            }
+        }
+    }
+}
+
 @include tiny-screens {
     .games-card {
         .btn-group {
@@ -51,5 +136,18 @@
 @include mobile-content {
     .games-card {
         flex-direction: column;
+    }
+}
+
+@include tablet-content {
+    .card-container {
+        flex-direction: column;
+
+        .card {
+            &:not(:last-of-type){
+                margin-right: 0;
+            }
+            margin-bottom: 1rem;
+        }
     }
 }
