--- a/scss/gen/_vars.scss
+++ b/scss/gen/_vars.scss
@@ -47,3 +47,7 @@ $transhaping-font: 'A-DAY-WITHOUT-SUN', 'Montserrat', serif;
     font-weight: 700;
     font-size: 1.8rem;
 }
+
+@mixin box-shadow {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+}
