--- a/scss/pages/_games.scss
+++ b/scss/pages/_games.scss
@@ -1,21 +1,10 @@
 .games {
-    h1 > .shapes-heading {
-        position: relative;
-
+    @include shapes-heading {
         &::before, &::after {
-            content: '';
-            position: absolute;
             width: 2rem;
             height: 2rem;
             background: #15DEE8;
             top: 1.5rem;
-        }
-        &::before {
-            left: -3.5rem;
-        }
-
-        &::after {
-            right: -3.5rem;
         }
     }
 
@@ -23,5 +12,23 @@
         text-align: center;
         margin: 2rem 0;
         color: grey;
+    }
+}
+
+@include tiny-screens {
+    .games {
+        h1 > .shapes-heading {
+            &::before, &::after {
+                top: 1rem;
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+            &::before {
+                left: -2.5rem;
+            }
+            &::after {
+                right: -2.5rem;
+            }
+        }
     }
 }
