--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -77,7 +77,7 @@
             &:nth-child(3)::before {
                 width: 17px;
                 height: 17px;
-                background: #9E43FF;
+                background: $shape-purple;
                 border-radius: 50%;
             }
             &:nth-child(4)::before {
