--- a/scss/gen/_vars.scss
+++ b/scss/gen/_vars.scss
@@ -8,6 +8,10 @@ $body-color: #2B2B2B;
 $white: #F8F8F8;
 $grey-light: #E9E9E9; 
 
+// shape colours 
+$shape-purple: #9E43FF;
+$shape-orange: #FFA033;
+
 // fonts
 $heading-font: 'Montserrat', sans-serif;
 $body-font: 'Source Sans Pro', sans-serif;
