--- a/scss/pages/_games.scss
+++ b/scss/pages/_games.scss
@@ -16,7 +16,7 @@
 }
 
 @include tiny-screens {
-    .games {
+    .games, .team, .contact {
         h1 > .shapes-heading {
             &::before, &::after {
                 top: 1rem;
