--- a/scss/gen/_setup.scss
+++ b/scss/gen/_setup.scss
@@ -68,7 +68,7 @@ p {
 }
 
 .content-box {
-    padding: 1rem;
+    padding: 2rem;
     background: white;
     margin-bottom: 2rem;
     @include box-shadow;
@@ -83,6 +83,12 @@ p {
 @include tiny-screens {
     .main-container {
         grid-template-columns: 0 auto 0;
+
+        &__content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     h1 {
@@ -91,5 +97,9 @@ p {
 
     h2 {
         font-size: 2rem;
+    }
+
+    .content-box {
+        width: 95%;
     }
 }
