--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -97,6 +97,16 @@
     }
 }
 
+.success {
+    .content-box {
+        text-align: center;
+
+        p {
+            margin-bottom: 2rem;
+        }
+    }
+}
+
 @include mobile-content {
     .contact {
         &__form {
