--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,6 @@
 
 @import 'pages/_frontpage';
 @import 'pages/_games';
+@import 'pages/_transhaping';
 @import 'pages/_team';
 @import 'pages/_contact';
