--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -6,6 +6,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        > .btn {
+            margin-bottom: 20vh;
+            font-size: 1.2rem;
+            text-transform: uppercase;
+            color: #120C40;
+            padding: 1rem 2rem;
+        }
     }
     
     h1 {
@@ -20,8 +28,8 @@
 
     .trailer {
         cursor: pointer;
-        margin-bottom: 20vh;
         width: 90%;
+        margin-bottom: 4rem;
     }
 
     .section {
@@ -35,6 +43,10 @@
             padding: 3rem 0;
             font-size: 1.1rem;
             height: auto;
+
+            a {
+                font-weight: bold;
+            }
         }
 
         &__content {
@@ -55,6 +67,29 @@
                 img {
                     order: 2;
                 }
+            }
+        }
+    }
+}
+
+@include mobile-content {
+    .games-transhaping {
+        grid-template-columns: 0 auto 0;
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        .section, .section--small {
+            padding: 1rem;
+        }
+
+        .section__content, .section:nth-of-type(even) .section__content{
+            grid-template-columns: 100%;
+            grid-template-rows: auto auto;
+
+            img {
+                order: 1;
             }
         }
     }
