--- a/css/main.css
+++ b/css/main.css
@@ -53,10 +53,6 @@ h2 {
   margin-bottom: 2rem;
 }
 
-h2::after {
-  content: '_';
-}
-
 h3 {
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
@@ -737,7 +733,7 @@ p + p {
   font-weight: normal;
   font-size: 20vh;
   text-transform: uppercase;
-  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8);
 }
 
 .main-container.transhaping-promo .hero {
@@ -860,17 +856,20 @@ p + p {
 }
 
 .games-transhaping h1 {
-  margin-bottom: 4rem;
-}
-
-.games-transhaping h2::after {
-  content: '';
+  margin: 3rem 0 1rem 0;
+  font-family: "A-DAY-WITHOUT-SUN", "Montserrat", serif;
+  font-weight: normal;
+  font-size: 8rem;
+  text-transform: uppercase;
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8);
 }
 
 .games-transhaping .trailer {
   cursor: pointer;
   width: 90%;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
+  -webkit-box-shadow: 0 8px 20px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 8px 20px 1px rgba(0, 0, 0, 0.3);
 }
 
 .games-transhaping .section {
@@ -902,8 +901,14 @@ p + p {
           align-items: center;
 }
 
+.games-transhaping .section__content h2 {
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+}
+
 .games-transhaping .section__content img {
   width: 100%;
+  -webkit-box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.3);
 }
 
 .games-transhaping .section:nth-of-type(even) .section__content {
@@ -921,9 +926,6 @@ p + p {
   .games-transhaping {
     -ms-grid-columns: 0 auto 0;
         grid-template-columns: 0 auto 0;
-  }
-  .games-transhaping h1 {
-    font-size: 2rem;
   }
   .games-transhaping .section, .games-transhaping .section--small {
     padding: 1rem;
